scripts/seo/__tests__/fixtures/r-seo-09/negative/05-handle-sitemap/head.tsx
export const handle = {
  sitemap: {
    priority: 0.9,
    changefreq: "daily",
  },
};

export default function Page() {
  return <div />;
}
